--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
     <div class="profile">
       <img class="profile__avatar" alt="портрет" src="images/profile__avatar.svg">
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто 
-          <button class="profile__edit-button"></button>
-        </h1>
+        <h1 class="profile__title">Жак-Ив Кусто </h1>
+        <button class="profile__edit-button"></button>
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
       <button class="profile__add-button"></button>
     </div>
     <div class="popup">
-      <div class="popup__container" type="submit">
-        <h2 class="popup__header" id="hui">Редактировать профиль</h2>
+      <form class="popup__container" >
+        <h2 class="popup__header">Редактировать профиль</h2>
         <input class="popup__name-input" value="">
         <input class="popup__job-input" value="">
         <button class="popup__close-button"></button>
-        <button class="popup__save-button"></button>
-      </div>
+        <button class="popup__save-button" type="submit"></button>
+      </form>
     </div>
     <div class="elements">
       <div class="element">
