--- a/index.html
+++ b/index.html
@@ -9,71 +9,70 @@
 <body class="page">
   <header class="header">
     <img class="header__logo" alt="логотим с надписью Mesto Russia" src="images/header__logo.svg">
-    <div class="header__line"></div>
   </header>
   <main class="content">
-    <div class="profile">
+    <section class="profile">
       <img class="profile__avatar" alt="портрет" src="images/profile__avatar.svg">
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто </h1>
-        <button class="profile__edit-button"></button>
+        <button type="button" class="profile__edit-button"></button>
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
-      <button class="profile__add-button"></button>
-    </div>
+      <button type="button" class="profile__add-button"></button>
+    </section>
     <div class="popup">
-      <form class="popup__container" >
+      <form name="Form" class="popup__container" >
         <h2 class="popup__header">Редактировать профиль</h2>
-        <input class="popup__name-input" value="">
-        <input class="popup__job-input" value="">
-        <button class="popup__close-button"></button>
+        <input class="popup__input popup__input_type_name" value="" name="nameInput">
+        <input class="popup__input popup__input_type_job" value="" name="jobInput">
+        <button class="popup__close-button" type="button"></button>
         <button class="popup__save-button" type="submit"></button>
       </form>
     </div>
-    <div class="elements">
+    <section class="elements">
       <div class="element">
         <img class="element__pic" src="images/karachaevsk.png" alt="г.Карачаевск">
         <div class="element__action-panel">
           <h2 class="element__name">Карачаевск</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <div class="element__heart-icon"></div>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/elbrus.png" alt="гора Эльбрус">
         <div class="element__action-panel">
           <h2 class="element__name">Ельбрус</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <div class="element__heart-icon"></div>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/dombay.png" alt="территория Домбай">
         <div class="element__action-panel">
           <h2 class="element__name">Домбай</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <div class="element__heart-icon"></div>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/kavkaz.jpg" alt="Кавказ">
         <div class="element__action-panel">
           <h2 class="element__name">Кавказ</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <div class="element__heart-icon"></div>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/sakhalin.jpg" alt="полуостров Сахалин">
         <div class="element__action-panel">
           <h2 class="element__name">Сахалин</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <div class="element__heart-icon"></div>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/rostov-na-donu.jpg" alt="Ростовская область">
         <div class="element__action-panel">
           <h2 class="element__name">Ростовская область</h2>
-          <div class="element__heart-icon element__heart-icon_active"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
-    </div>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
