fix: после второй проверки ревьером

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="profile">
       <img class="profile__avatar" alt="портрет" src="images/profile__avatar.svg">
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто </h1>
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button type="button" class="profile__edit-button"></button>
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
@@ -34,35 +34,35 @@
         <img class="element__pic" src="images/karachaevsk.png" alt="г.Карачаевск">
         <div class="element__action-panel">
           <h2 class="element__name">Карачаевск</h2>
-          <div class="element__heart-icon"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/elbrus.png" alt="гора Эльбрус">
         <div class="element__action-panel">
           <h2 class="element__name">Ельбрус</h2>
-          <div class="element__heart-icon"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/dombay.png" alt="территория Домбай">
         <div class="element__action-panel">
           <h2 class="element__name">Домбай</h2>
-          <div class="element__heart-icon"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/kavkaz.jpg" alt="Кавказ">
         <div class="element__action-panel">
           <h2 class="element__name">Кавказ</h2>
-          <div class="element__heart-icon"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__pic" src="images/sakhalin.jpg" alt="полуостров Сахалин">
         <div class="element__action-panel">
           <h2 class="element__name">Сахалин</h2>
-          <div class="element__heart-icon"></div>
+          <button class="element__heart-icon" type="button"></button>
         </div>
       </div>
       <div class="element">
