--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <button type="button" class="profile__add-button"></button>
     </section>
-    
+
     <div class="popup profile-popup">
       <form name="FormProfile" class="popup__container" >
         <h2 class="popup__header">Редактировать профиль</h2>
@@ -45,6 +45,7 @@
       <template class="template">
         <div class="element">
           <img class="element__pic" src="" alt="">
+          <button class="element__delite-button" type="button"></button>
           <div class="element__action-panel">
             <h2 class="element__name"></h2>
             <button class="element__heart-icon" type="button"></button>
