feat: picture-popup opens partly

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       </form>
     </div>
 
+    <div class="popup picture-popup">
+      <img class="picture-popup__container" src="">
+      <p class="picture-popup__subtitle"></p>
+      <button class="popup__close-button" type="button"></button>
+    </div>
+
     <section class="elements">
       <template class="template">
         <div class="element">
