feat: отрывается и закрывается попап с картинкой. Проблемы с отступами на маленьком разрешении

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <div class="popup profile-popup">
-      <form name="FormProfile" class="popup__container" >
+      <form name="FormProfile" class="popup__container">
         <h2 class="popup__header">Редактировать профиль</h2>
         <input class="popup__input popup__input_type_name" value="" name="nameInput">
         <input class="popup__input popup__input_type_job" value="" name="jobInput">
@@ -41,10 +41,12 @@
       </form>
     </div>
 
-    <div class="popup picture-popup">
-      <img class="picture-popup__container" src="">
-      <p class="picture-popup__subtitle"></p>
-      <button class="popup__close-button" type="button"></button>
+    <div class="picture-popup">
+      <div class="picture-popup__container">
+        <img class="picture-popup__pic" src="">
+        <p class="picture-popup__subtitle"></p>
+        <button class="popup__close-button" type="button"></button>
+      </div>
     </div>
 
     <section class="elements">
