странно, попап с картинкой встраивается в страктуру

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="picture-popup__container">
         <img class="picture-popup__pic" src="">
         <p class="picture-popup__subtitle"></p>
-        <button class="popup__close-button" type="button"></button>
+        <button class="picture-popup__close-button" type="button"></button>
       </div>
     </div>
 
