feat: сделала popup_type_picture

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button type="button" class="profile__add-button"></button>
     </section>
 
-    <div class="popup profile-popup">
+    <div class="popup popup_type_profile">
       <form name="FormProfile" class="popup__container">
         <h2 class="popup__header">Редактировать профиль</h2>
         <input class="popup__input popup__input_type_name" value="" name="nameInput">
@@ -31,7 +31,7 @@
       </form>
     </div>
 
-    <div class="popup place-popup">
+    <div class="popup popup_type_place">
       <form name="FormPlace" class="popup__container" >
         <h2 class="popup__header">Новое место</h2>
         <input class="popup__input popup__input_type_place-name" value="" name="placeName"  placeholder="Название">
@@ -41,11 +41,11 @@
       </form>
     </div>
 
-    <div class="picture-popup">
-      <div class="picture-popup__container">
-        <img class="picture-popup__pic" src="">
-        <p class="picture-popup__subtitle"></p>
-        <button class="picture-popup__close-button" type="button"></button>
+    <div class="popup popup_type_picture">
+      <div class="popup_type_picture__container">
+        <img class="popup_type_picture__pic" src="">
+        <p class="popup_type_picture__subtitle"></p>
+        <button class="popup_type_picture__close-button" type="button"></button>
       </div>
     </div>
 
