на 1 ревью после автотестов

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="popup popup_type_picture">
       <div class="popup_type_picture__container">
-        <img class="popup_type_picture__pic" src="">
+        <img class="popup_type_picture__pic">
         <p class="popup_type_picture__subtitle"></p>
         <button class="popup_type_picture__close-button" type="button"></button>
       </div>
@@ -52,7 +52,7 @@
     <section class="elements">
       <template class="template">
         <div class="element">
-          <img class="element__pic" src="" alt="">
+          <img class="element__pic" alt="">
           <button class="element__delite-button" type="button"></button>
           <div class="element__action-panel">
             <h2 class="element__name"></h2>
