--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="popup popup_type_picture">
       <div class="popup_type_picture__container">
-        <img class="popup_type_picture__pic" src="" alt="">
+        <img class="popup_type_picture__pic" src="#" alt="">
         <p class="popup_type_picture__subtitle"></p>
         <button class="popup_type_picture__close-button" type="button"></button>
       </div>
