после того как переназвата popup_type_picture__

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
 
     <div class="popup popup_type_picture">
-      <div class="popup_type_picture__container">
-        <img class="popup_type_picture__pic" src="#" alt="">
-        <p class="popup_type_picture__subtitle"></p>
-        <button class="popup_type_picture__close-button" type="button"></button>
+      <div class="popup__picture-container">
+        <img class="popup__picture" src="#" alt="#">
+        <p class="popup__subtitle"></p>
+        <button class="popup__close-button" type="button"></button>
       </div>
     </div>
 
