--- a/index.html
+++ b/index.html
@@ -19,36 +19,10 @@
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
       <button type="button" class="profile__add-button"></button>
+          </div>
+        </div>
+      </button>
     </section>
-
-    <div class="popup popup_type_profile">
-      <form name="FormProfile" class="popup__container">
-        <h2 class="popup__header">Редактировать профиль</h2>
-        <input class="popup__input popup__input_type_name" value="" name="nameInput">
-        <input class="popup__input popup__input_type_job" value="" name="jobInput">
-        <button class="popup__close-button" type="button"></button>
-        <button class="popup__save-button" type="submit"></button>
-      </form>
-    </div>
-
-    <div class="popup popup_type_place">
-      <form name="FormPlace" class="popup__container" >
-        <h2 class="popup__header">Новое место</h2>
-        <input class="popup__input popup__input_type_place-name" value="" name="placeName"  placeholder="Название">
-        <input class="popup__input popup__input_type_place-link" value="" name="placeLink"  placeholder="Ссылка на картинку">
-        <button class="popup__close-button" type="button"></button>
-        <button class="popup__save-button" type="submit"></button>
-      </form>
-    </div>
-
-    <div class="popup popup_type_picture">
-      <div class="popup__picture-container">
-        <img class="popup__picture" src="#" alt="#">
-        <p class="popup__subtitle"></p>
-        <button class="popup__close-button" type="button"></button>
-      </div>
-    </div>
-
     <section class="elements">
       <template class="template">
         <div class="element">
@@ -61,6 +35,29 @@
         </div>
       </template>
     </section>
+    <div class="popup popup_type_profile">
+      <form name="FormProfile" class="popup__container">
+        <h2 class="popup__header">Редактировать профиль</h2>
+        <input class="popup__input popup__input_type_name" value="" name="nameInput">
+        <input class="popup__input popup__input_type_job" value="" name="jobInput">
+        <button class="popup__close-button" type="button"></button>
+        <button class="popup__save-button" type="submit"></button>
+      </form>
+    </div>
+    <div class="popup popup_type_place">
+      <form name="FormPlace" class="popup__container" >
+        <h2 class="popup__header">Новое место</h2>
+        <input class="popup__input popup__input_type_place-name" value="" name="placeName"  placeholder="Название">
+        <input class="popup__input popup__input_type_place-link" value="" name="placeLink"  placeholder="Ссылка на картинку">
+        <button class="popup__close-button" type="button"></button>
+        <button class="popup__save-button" type="submit"></button>
+      </form>
+    </div>
+    <div class="popup popup_type_picture">
+      <div class="popup__picture-container">
+        <img class="popup__picture" src="#" alt="#">
+        <p class="popup__subtitle"></p>
+        <button class="popup__close-button" type="button">
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
