на 2 ревью после автотестов

--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
       <button type="button" class="profile__add-button"></button>
-          </div>
-        </div>
-      </button>
     </section>
     <section class="elements">
       <template class="template">
@@ -57,7 +54,9 @@
       <div class="popup__picture-container">
         <img class="popup__picture" src="#" alt="#">
         <p class="popup__subtitle"></p>
-        <button class="popup__close-button" type="button">
+        <button class="popup__close-button" type="button"></button>
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
