--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
       </template>
     </section>
     <div class="popup popup_type_profile">
-      <form name="FormProfile" class="popup__container">
+      <form name="FormProfile" class="popup__container"  novalidate>
         <h2 class="popup__header">Редактировать профиль</h2>
-        <input class="popup__input popup__input_type_name" value="" name="nameInput">
-        <input class="popup__input popup__input_type_job" value="" name="jobInput">
+        <input class="popup__input popup__input_type_name" id="name-input" value="" name="nameInput" type="text" minlength="2" maxlength="40" required>
+        <span class="popup__input-error name-input-error" id="name-input-error"></span>
+        <input class="popup__input popup__input_type_job" id="job-input" value="" name="jobInput" type="text" minlength="2" maxlength="200" required>
+        <span class="popup__input-error job-input-error"></span>
         <button class="popup__close-button" type="button"></button>
         <button class="popup__save-button" type="submit"></button>
       </form>
     </div>
     <div class="popup popup_type_place">
-      <form name="FormPlace" class="popup__container" >
+      <form name="FormPlace" class="popup__container" novalidate>
         <h2 class="popup__header">Новое место</h2>
-        <input class="popup__input popup__input_type_place-name" value="" name="placeName"  placeholder="Название">
-        <input class="popup__input popup__input_type_place-link" value="" name="placeLink"  placeholder="Ссылка на картинку">
+        <input class="popup__input popup__input_type_place-name" id="place-name-input"value="" name="placeName"  placeholder="Название" type="text" minlength="2" maxlength="30" required>
+        <span class="popup__input-error place-name-input-error"></span>
+        <input class="popup__input popup__input_type_place-link" id="place-link-input" value="" name="placeLink"  placeholder="Ссылка на картинку" type="url" required>
+        <span class="popup__input-error place-link-input-error"></span>
         <button class="popup__close-button" type="button"></button>
         <button class="popup__save-button" type="submit"></button>
       </form>
@@ -62,5 +66,6 @@
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
   </footer>
   <script src="scripts/script.js"></script>
+  <script src="scripts/validate.js"></script>
 </body>
 </html> 
