на 1 проверку после автотестов. Первая попытка исправить ошибку в  index.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="elements">
       <template class="template">
         <div class="element">
-          <img class="element__pic" alt="">
+          <img class="element__pic" alt="#" src="#">
           <button class="element__delite-button" type="button"></button>
           <div class="element__action-panel">
             <h2 class="element__name"></h2>
