feat: add Card.js

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
   </footer>
-  <script src="scripts/script.js"></script>
-  <script src="scripts/validate.js"></script>
+  <script src="scripts/script.js" type="module"></script>
+  <script src="scripts/validate.js" type="module"></script>
+  <script src="scripts/card.js" type="module"></script>
 </body>
 </html> 
