--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
   </footer>
   <script src="scripts/script.js" type="module"></script>
-  <script src="scripts/formValidator.js" type="module"></script>
-  <script src="scripts/card.js" type="module"></script>
+  <script src="scripts/FormValidator.js" type="module"></script>
+  <script src="scripts/Card.js" type="module"></script>
 </body>
 </html> 
