--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
   </footer>
   <script src="scripts/script.js" type="module"></script>
   <script src="scripts/FormValidator.js" type="module"></script>
-  <script src="scripts/Card.js" type="module"></script>
+  <script src="scripts/Сard.js" type="module"></script>
 </body>
 </html> 
